FIX: alignment of css grid on my artworks page

--- a/app/assets/stylesheets/components/_artwork-card.scss
+++ b/app/assets/stylesheets/components/_artwork-card.scss
@@ -75,10 +75,12 @@ figure.myartwork-card {
     }
   }
 }
+
 .artwork-cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 16px;
+  justify-items: center;
 }
 
 // Smallest device
