--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -4,3 +4,7 @@
     display: flex;
     justify-content: space-around;
 }
+
+.container-cards-my-artworks {
+    text-align: center;
+}
